# bookmark-ripper

./: main.py  pyproject.toml  test.py
bookmarklib/: crawler.py  parser.py
