[tool.poetry]
name = "bookmark-ripper"
version = "0.1.0"
description = ""
authors = ["shino <jaredmc32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.0"
beautifulsoup4 = "^4.12.2"
types-beautifulsoup4 = "^4.12.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
